--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "dev": "rollup -c --watch"
   },
   "devDependencies": {
-    "typescript": "^3.2.1",
     "rollup": "^1.1.2",
     "rollup-plugin-commonjs": "^9.2.0",
-    "rollup-plugin-node-resolve": "^4.0.0"
+    "rollup-plugin-json": "^3.1.0",
+    "rollup-plugin-node-resolve": "^4.0.0",
+    "typescript": "^3.2.1"
   },
   "dependencies": {
     "@types/react": "^16.8.3",
