--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "saber2pr",
+  "name": "saber2pr-page",
   "version": "0.0.1",
   "description": "saber2pr's webpage",
   "repository": {
