--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "scripts": {
     "start": "tsc --watch",
     "dev": "rollup -c --watch",
-    "build": "uglifyjs ./build/bundle.min.js -o ./build/bundle.min.js -m -c"
+    "build": "uglifyjs ./build/bundle.min.js -o ./build/bundle.min.js -m -c",
+    "edit": "node ./lib/data/editor.js"
   },
   "devDependencies": {
     "rollup": "^1.1.2",
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-json": "^3.1.0",
     "rollup-plugin-node-resolve": "^4.0.0",
+    "saber-node": "^1.3.0",
     "typescript": "^3.2.1",
     "uglify-js": "^3.4.9"
   },
