--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "saber2pr-page",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "saber2pr's webpage",
   "repository": {
     "type": "git",
@@ -13,6 +13,7 @@
     "start": "tsc --watch",
     "dev": "rollup -c --watch",
     "build": "uglifyjs ./build/bundle.min.js -o ./build/bundle.min.js -m -c",
+    "serve": "node ./lib/Server.js",
     "edit": "node ./lib/data/editor.js"
   },
   "devDependencies": {
@@ -20,7 +21,9 @@
     "rollup-plugin-commonjs": "^9.2.0",
     "rollup-plugin-json": "^3.1.0",
     "rollup-plugin-node-resolve": "^4.0.0",
-    "saber-node": "^1.3.0",
+    "saber-httpserver": "0.0.4",
+    "saber-observable": "^1.0.9",
+    "saber-xhr": "^1.0.3",
     "typescript": "^3.2.1",
     "uglify-js": "^3.4.9"
   },
