--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "saber2pr-page",
-  "version": "0.1.2",
+  "version": "0.1.4",
   "description": "saber2pr's webpage utils.",
   "repository": {
     "type": "git",
@@ -8,6 +8,10 @@
   },
   "author": "saber2pr",
   "license": "ISC",
+  "files": [
+    "lib/core/utils/*",
+    "lib/index.*"
+  ],
   "main": "./lib/index.js",
   "scripts": {
     "start": "tsc --watch",
