--- a/package.json
+++ b/package.json
@@ -38,5 +38,11 @@
     "@types/react-dom": "^16.8.1",
     "react": "^16.8.2",
     "react-dom": "^16.8.2"
+  },
+  "dependencies": {
+    "@types/react": "^16.8.6",
+    "@types/react-dom": "^16.8.2",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3"
   }
 }
